# Todo_Full_Stack_Web_Application2

./: .gitignore  README.md  cookies.txt  env.txt
.qwen/skills/: better-auth-jwt-fastapi.skill.md  fastapi-sqlmodel-neon.skill.md  monorepo-speckit-fullstack.skill.md  nextjs-app-router-phase2.skill.md  sqlmodel-migration-neon.skill.md  task-crud-api-conventions.skill.md
.specify/memory/: constitution.md
backend/: alembic.ini  check_db.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  test_error.py  test_jwt.py  test_jwt_simple.py
backend/alembic/: env.py
backend/alembic/versions/: f688db4a432f_create_tasks_table.py
backend/middleware/: jwt.py
backend/routes/: tasks.py
frontend/: drizzle.config.ts  next.config.mjs  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  globals.css.d.ts  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/components/: Footer.tsx  Header.tsx  SideBar.tsx  TaskCard.tsx  TaskForm.tsx
frontend/drizzle/: schema.ts
frontend/drizzle/migrations/: 0000_tan_avengers.sql
frontend/drizzle/migrations/meta/: _journal.json  (+2 more)
frontend/lib/: api.ts  auth-server.ts  auth.ts
history/prompts/: 001-frontend-todo-ui.spec.prompt.md
history/prompts/001-frontend-todo-ui/: 002-frontend-implementation.tasks.prompt.md
specs/001-frontend-todo-ui/: spec.md
specs/001-task-crud-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-new.md  tasks.md
(+14 files in other folders)
